# splitvantage

./: .gitignore  LICENSE  MANIFESTO.md  NOTICE  README.md  SKILL.md  pyproject.toml  pytest.ini  run_test.py  splitvantage.py  test_splitvantage.py
.github/workflows/: ci.yml
transcripts/: splitvantage_20260612_022937.json  splitvantage_20260612_023429.json  splitvantage_20260612_023535.json
