[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "splitvantage"
version = "0.2.0"
description = "Cross-model divergence review (CrossPol): same prompt, two models, structural diff."
requires-python = ">=3.9"

[tool.setuptools]
py-modules = ["splitvantage"]
